# pitchtools

./: README.rst  pitchtools.py  pyproject.toml  setup.py
docs/: conf.py  index.rst  requirements.txt
pitchtools/: __init__.py  vectorized.py
test/: test_enharmonic_variations.py
