[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pitchtools"
version = "1.15.0"
description = "Utilities to work with pitches, convert between midinotes, frequency and notenames"
authors = [
  { name = "Eduardo Moguillansky", email = "eduardo.moguillansky@gmail.com" },
]
license = { file = "LICENSE.md" }
readme = "README.rst"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"

dependencies = [
]

[tool.setuptools]
packages = ["pitchtools"]


[tool.setuptools.package-data]
pitchtools = ["py.typed"]

[project.urls]
"Homepage" = "https://github.com/gesellkammer/pitchtools"
